--- a/templates/main/generator.html
+++ b/templates/main/generator.html
@@ -31,23 +31,21 @@
                                             пищи</label>
                                         <div>
                                             <div class="form-check">{{ gen_form.breakfast_check }}<label class="form-check-label"
-                                                                                               for="formCheck-1"
+                                                                                               for="breakfast"
                                                                                                style="font-size: 17px;">Завтрак</label>
                                             </div>
                                             <div class="form-check">{{ gen_form.lunch_check }}<label class="form-check-label"
-                                                                                               for="formCheck-2"
+                                                                                               for="lunch"
                                                                                                style="font-size: 17px;">Обед</label>
                                             </div>
                                             <div class="form-check">{{ gen_form.dinner_check }}<label class="form-check-label"
-                                                                                                for="formCheck-3"
+                                                                                                for="dinner"
                                                                                                 style="font-size: 17px;">Ужин</label>
                                             </div>
                                         </div>
                                     </div>
                                     <input class="btn btn-primary" type="submit" style="background: #369f26;" value="Генерация">
                                 </form>
-                                
-
                             </div>
                         </div>
                     </div>
